tests/snapshots/integration_tui_snapshots__tui_filter_input_open.snap
---
source: tests/integration_tui_snapshots.rs
expression: rendered
---
 [/search_]  [GET]  [POST]  [PUT]  [DELETE]  [PATCH]  [2xx]  [3xx]  [4xx]  [5xx]  [p]  [c clear]
┌ Requests (20) ───────────────────────────────┐┌ Detail ──────────────────────────────────────────────────────────────┐
│▸ 12:00:00 POST   200   142ms /auth/login  [y]││Method:   POST                                                       █│
│  12:00:01 GET    200    48ms /users/me    [y]││URL:      https://api.example.com/auth/login                         █│
│  12:00:02 GET    200   211ms /feed?cursor=[y]││Status:   200   Duration: 142ms                                      █│
│  12:00:03 GET    304    28ms /notification[y]││                                                                     █│
│  12:00:04 PUT    200    95ms /profile     [y]││▾ Request Headers                                                    █│
│  12:00:05 GET    404    31ms /missing-reso[y]││  Accept: application/json                                           █│
│  12:00:06 POST   201   788ms /payments/cha[y]││  Authorization: Bearer super-secret-XYZ                             █│
│  12:00:07 DELETE 204    17ms /sessions/old[y]││  Content-Type: application/json                                     █│
│  12:00:08 GET    200    62ms /assets/image[y]││                                                                     █│
│  12:00:09 POST   200   356ms /search?q=rea[y]││▾ Request Body                                                       █│
│  12:00:10 PATCH  200    71ms /settings/pre[y]││  {                                                                  █│
│  12:00:11 GET    401    14ms /orders/2345/[y]││    "refresh": "r_8f2c9d1",                                          █│
│  12:00:12 GET    202     9ms /events/track[y]││    "token": "eyJhbGciOiJIUzI1NiIsInR5c...",                         █│
│  12:00:13 POST   500  1042ms /v2/batch/ing[y]││    "user": {                                                        █│
│  12:00:14 GET    200   118ms /really/long/[y]││      "email": "claude@example.com",                                 █│
│  12:00:15 POST   413    26ms /upload/blob [y]││      "id": 4218,                                                    █│
│  12:00:16 GET    200     4ms /healthz     [y]││      "roles": [                                                     ║│
│  12:00:17 GET    429     8ms /flags       [y]││        "admin",                                                     ║│
│  12:00:18 DELETE 200    19ms /cache/keys/u[y]││        "viewer"                                                     ║│
│  12:00:19 POST   503  2150ms /reports/gene[y]││      ]                                                              ║│
│                                              ││    }                                                                ║│
│                                              ││  }                                                                  ║│
│                                              ││                                                                     ║│
│                                              ││▾ Response Headers                                                   ║│
│                                              ││  Content-Type: application/json; charset=utf-8                      ║│
│                                              ││  X-Request-Id: req-0000                                             ║│
│                                              ││                                                                     ║│
│                                              ││▾ Response Body                                                      ║│
│                                              ││  {                                                                  ║│
│                                              ││    "refresh": "r_8f2c9d1",                                          ║│
│                                              ││    "token": "eyJhbGciOiJIUzI1NiIsInR5c...",                         ║│
│                                              ││    "user": {                                                        ║│
│                                              ││      "email": "claude@example.com",                                 ║│
│                                              ││      "id": 4218,                                                    ║│
│                                              ││      "roles": [                                                     ║│
└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
 rustotron  mock data — 20 rows — not connected to any server  —  mem: 12.3 MB
 q/Ctrl+C: quit · tab: pane · j/k or ↑/↓: nav (list) / scroll body (detail) · PgUp/PgDn: body · / url · 1-5 methods · Al
