tests/snapshots/integration_tui_snapshots__tui_filter_status_4xx_active.snap
---
source: tests/integration_tui_snapshots.rs
expression: rendered
---
 [/url]  [GET]  [POST]  [PUT]  [DELETE]  [PATCH]  [2xx]  [3xx]  [4xx]  [5xx]  [p]  [c clear]
┌ Requests (4/20) ─────────────────────────────┐┌ Detail ──────────────────────────────────────────────────────────────┐
│▸ 12:00:05 GET    404    31ms /missing-reso[y]││Method:   GET                                                        █│
│  12:00:11 GET    401    14ms /orders/2345/[y]││URL:      https://api.example.com/missing-resource                   █│
│  12:00:15 POST   413    26ms /upload/blob [y]││Status:   404   Duration: 31ms                                       █│
│  12:00:17 GET    429     8ms /flags       [y]││                                                                     █│
│                                              ││▾ Request Headers                                                    █│
│                                              ││  Accept: application/json                                           █│
│                                              ││  Content-Type: application/json                                     █│
│                                              ││                                                                     █│
│                                              ││▾ Request Body                                                       █│
│                                              ││  {                                                                  █│
│                                              ││    "error": "invalid_token",                                        █│
│                                              ││    "hint": "POST /auth/refresh with refresh_token",                 █│
│                                              ││    "message": "The bearer token has expired. Refresh it and try     █│
│                                              ││again."                                                              █│
│                                              ││  }                                                                  █│
│                                              ││                                                                     █│
│                                              ││▾ Response Headers                                                   █│
│                                              ││  Content-Type: application/json; charset=utf-8                      █│
│                                              ││  X-Request-Id: req-0005                                             █│
│                                              ││                                                                     █│
│                                              ││▾ Response Body                                                      ║│
│                                              ││  {                                                                  ║│
│                                              ││    "error": "invalid_token",                                        ║│
│                                              ││    "hint": "POST /auth/refresh with refresh_token",                 ║│
│                                              ││    "message": "The bearer token has expired. Refresh it and try     ║│
│                                              ││again."                                                              ║│
│                                              ││  }                                                                  ║│
│                                              ││                                                                     ║│
│                                              ││                                                                     ║│
│                                              ││                                                                     ║│
│                                              ││                                                                     ║│
│                                              ││                                                                     ║│
│                                              ││                                                                     ║│
│                                              ││                                                                     ║│
│                                              ││                                                                     ║│
└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
 rustotron  mock data — 20 rows — not connected to any server · filter: 4xx  —  mem: 12.3 MB
 q/Ctrl+C: quit · tab: pane · j/k or ↑/↓: nav (list) / scroll body (detail) · PgUp/PgDn: body · / url · 1-5 methods · Al
